# canalysis

./: .gitignore  CalciumAnalysis.toml  CalciumAnalysis.yml  Fashion_mnist.py  JS notes on your scipts..docx  MANIFEST.in  Main.py  README.md  __init__.py  config.py  configtest.py  data.py  defaults.yml  environment.yml  iris_example.py  main.py  models.py  pyproject.toml  requirements.txt  requirements.txt.bak  requirements_dev.txt  setup.cfg  setup.py
Analysis/: Func.py  Log.py  PCA.py  Plots.py  Test_main.py  __init__.py
CalciumAnalysis/: __init__.py  main.py  params.yaml
CalciumAnalysis/analysis/: __init__.py  principal_components.py  process_data.py
CalciumAnalysis/analysis/analysis_utils/: analysis_funcs.py  ca_pca.py
CalciumAnalysis/analysis/stat_utils/: __init__.py  iter_to_dict.py  stats_helpers.py
CalciumAnalysis/data/: __init__.py  all_data.py  calcium_data.py  calciumdata.py  eating_data.py  event_data.py  gpio_data.py  taste_data.py  trace_data.py
CalciumAnalysis/data/containers/: eating_data.py  taste_data.py  trace_data.py
CalciumAnalysis/data/data_utils/: OutlierBase.py  __init__.py  all_data.py  containers.py  displayable_path.py  event_data.py  file_handler.py  funcs.py  gpio_data.py  process_gpio.py  taste_data.py  trace_data.py  zscore.py
CalciumAnalysis/file_handling/: file_handler.py
CalciumAnalysis/graphs/: __init__.py  heatmaps.py  iter_to_dict.py  plot.py
CalciumAnalysis/graphs/base/: _base_figure.py  _base_heatmap.py
CalciumAnalysis/graphs/graph_utils/: Mixins.py  ax_helpers.py  cafigure.py  graph_funcs.py  helpers.py  quick_plots.py
CalciumAnalysis/misc/: excepts.py  file_handler.py  funcs.py  gui.py
CalciumAnalysis/misc/file_handling/: displayable_path.py  file_handler.py
CalciumAnalysis/misc/gui/: CalciumAnalysis.cpp  CalciumAnalysis.h  pch.h  settings.set
CalciumAnalysis/neuralnetwork/: SVM.py  __init__.py  main_nn.py
CalciumAnalysis/neuralnetwork/nn_utils/: __init__.py  _properties.py  _props.py  _validate.py  datahandler.py  funcs.py  scores.py
CalciumAnalysis/parameters/: __init__.py  data_params.yaml  params.yaml
CalciumAnalysis/stats/: __init__.py  process_data.py  stats.py
CalciumAnalysis/stats/stat_utils/: __init__.py  iter_to_dict.py  outliers.py  stats_helpers.py
CalciumAnalysis/utils/: __init__.py  excepts.py  funcs.py  wrappers.py
canalysis/: __init__.py  params.yaml  run.py
canalysis/.ipynb_checkpoints/: __init__-checkpoint.py
canalysis/analysis/: __init__.py
canalysis/analysis/analysis_utils/: __init__.py  analysis_funcs.py
canalysis/data/: __init__.py
canalysis/graphs/: __init__.py  heatmaps.py  plot.py
canalysis/helpers/: __init__.py  funcs.py
canalysis/utils/: __init__.py  excepts.py  funcs.py
pub/: s2p.ipynb  v1.py
src/: main.py
src/data/: calciumdata.py  taste_data.py
src/graphs/: heatmaps.py  plot.py
src/misc/: wrappers.py
src/neuralnetwork/: SVM.py  main_nn.py
src/stats/: stats.py
tests/: data_test.py  test_requirements.py
trace_analysis/: data.py  main.py  scratch.txt  testing.py
trace_analysis/core/: calciumdata.py  data.py  draw_plots.py  file_handler.py  heatmaps.py  stats.py  taste_data.py
trace_analysis/graphing/: draw_plots.py
trace_analysis/graphs/: Mixins.py  _Plots.py  draw_plots.py  graph_funcs.py  heatmaps.py  heatmaps2.py  plot.py  quick_plots.py
trace_analysis/models/: SVM.py  SVM2.py  ann_funcs.py  ann_stats.py  main.py  main_SVM.py  param_loop.py  params.py  scores.py
trace_analysis/neural_network/: SVM.py  models.py
trace_analysis/stats/: stats.py  stats_helpers.py
trace_analysis/utils/: FileHandler.py  data_manipulation.py  draw_plots.py  excepts.py  file_handler.py  funcs.py  kernels.py  stats_helpers.py  wrappers.py
utils/: __init__.py  draw_plots.py  excepts.py  funcs.py  stats.py
web/: app.py
web/templates/: index.html  main.html
(+57 files in other folders)
