[tool.poetry]
name = "CalciumAnalysis"
version = "0.1.0"
description = "This project provides a structure to integrate calcium traces and events, perform statistical analysis, make graphs and do classification problems to further understand the dataset."
authors = ["Flynn O'Connell"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
PyYAML = "^6.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.25.0"
pytest-cov = "^3.0.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
